# Nubify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  aws_client.py  chat.py  commands.py  config.py  deployer.py  main.py  templates.py
templates/: ec2-basic-no-key.yaml  ec2-basic.yaml  lambda-function.yaml  rds-basic.yaml  s3-bucket.yaml  s3-custom.yaml
tests/: __init__.py  test_aws_client.py  test_chat.py  test_config.py  test_deployer.py  test_main.py  test_templates.py
